fix input boxes overflowing due to their padding and border

--- a/static/style.css
+++ b/static/style.css
@@ -151,7 +151,7 @@ footer {
 
 #login-form input,
 #signup-form input {
-    width: 100%;
+    width: calc(100% - 22px);
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
